# IZP_TNine

./: .gitignore  CMakeLists.txt  README.md  text_file.txt  tnine.c
generator/: CMakeLists.txt  generator.c
test/: test.py  tnine.py
