CMAKE_MINIMUM_REQUIRED(VERSION 3.29)
PROJECT(TNINE)

# for now test the desired compiler
SET(CMAKE_C_COMPILER gcc)
SET(CMAKE_CXX_COMPILER g++)
SET(CMAKE_C_STANDARD 11)
SET(CMAKE_CXX_STANDARD 11)

IF (CMAKE_COMPILER_IS_GNUCC)
    SET(CMAKE_C_FLAGS "-Wall -Wextra -Werror --warn-no-unused-parameter")
ENDIF (CMAKE_COMPILER_IS_GNUCC)

ADD_EXECUTABLE(TNINE
    tnine.c
    )
