CMAKE_MINIMUM_REQUIRED(VERSION 3.29)
PROJECT(TNINE)

SET(CMAKE_C_STANDARD 11)
SET(CMAKE_CXX_STANDARD 11)

IF (CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_CLANG)
    SET(CMAKE_C_FLAGS "-Wall -Wextra -Werror --warn-no-unused-parameter")
ENDIF (CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_CLANG)

ADD_EXECUTABLE(TNINE
    tnine.c
    )
